<resources>
	<string name="app_name">Mobile Development</string>

	<string name="fio">Гавричкина 8К92</string>

	//ЛБ1
	<string name="lb1_title">ЛР – 1</string>
	<string name="lb1_summ">Сложить числа</string>
	<string name="lb1_edit_hint">Введите число</string>
	<string name="lb1_result">Результат операции: %1$3f</string>
	<string name="lb1_no_result">Введите числа...</string>

	//ЛБ2
	<string name="lb2_title">ЛР – 2</string>
	<string name="lb2_btn">Add Button</string>

	//ЛБ3
	<string name="lb3_title">ЛР – 3</string>
	<string name="lb3_btn">Add Button</string>
	<string name="whos_the_best">Кто лучше?</string>
	<string name="read_this">Читали что-нибудь из этого?</string>
	<string name="who_wrote">Назовите авторов:</string>

	//ЛБ4
	<string name="lb4_title">ЛР – 5</string>
	<string name="lb4_text">ТЕКСТ</string>
	<string name="lb4_audio">АУДИО</string>
	<string name="lb4_book_title">Название:</string>
	<string name="lb4_book_title_et">Название книги</string>
	<string name="lb4_book_author">Автор:</string>
	<string name="lb4_book_author_et">Автор книги</string>
	<string name="lb4_book_type">Тип:</string>
	<string name="lb4_book_price">Стоимость:</string>
	<string name="lb4_book_price_et">Стоимость</string>
	<string name="lb4_book_rating">Рейтинг:</string>
	<string name="lb4_book_rating_et">Оценка</string>
	<string name="lb6_title">ЛР – 6</string>
	<string-array name="lb4_book_types">
		<item>ТЕКСТ</item>
		<item>АУДИО</item>
	</string-array>

	//ЛБ 6
	<string name="lb6_open_settings">Открыть настройки геолокации</string>
	<string name="lb6_gps_status">GPS OFF</string>
	<string name="lb6_network_status">Network OFF</string>
	<string name="lb7_title">ЛР – 7</string>

	//ЛБ 7
	<string name="lb7_hint">Название репозитория..</string>
	<string name="lb7_btn">Поиск</string>
	<string name="lb8_title">ЛР – 8</string>


	//ЛБ 8
	<string name="lb8_season_change">Смена сезона</string>
	<string name="lb8_share">Поделиться</string>


	//ЛБ 10
	<string name="lb10_title">ЛР – 10</string>
	<string name="lb10_start_service">start service</string>
	<string name="lb10_stop_service">stop service</string>
	<string name="lb10_get_count">get count</string>
	<string name="lb10_set_interval">set interval</string>
	<string name="lb10_reset">reset</string>
	<string name="lb10_set_count">set count</string>

</resources>