<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB4BookItemActivity">

	<ImageView
		android:id="@+id/lb5_book_cover"
		android:layout_width="wrap_content"
		android:layout_height="140dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:src="@drawable/ic_book"
		android:layout_marginTop="55dp"
		android:scaleType="fitCenter"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		android:orientation="vertical"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/lb5_book_cover"
		android:layout_marginTop="20dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:text="@string/lb4_book_title"
			android:textAppearance="@style/TextMainStyle" />

		<EditText
			android:id="@+id/lb4_et_title"
			style="@style/EditTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/lb4_book_title_et"
			android:inputType="textCapSentences" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="5dp"
			android:text="@string/lb4_book_author"
			android:textAppearance="@style/TextMainStyle" />

		<EditText
			android:id="@+id/lb4_et_author"
			style="@style/EditTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/lb4_book_author_et"
			android:inputType="textCapSentences" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="5dp"
			android:text="@string/lb4_book_type"
			android:textAppearance="@style/TextMainStyle" />
		<Spinner
			android:id="@+id/lb4_spinner_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:entries="@array/lb4_book_types" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="5dp"
			android:text="@string/lb4_book_price"
			android:textAppearance="@style/TextMainStyle" />
		<EditText
			android:id="@+id/lb4_et_price"
			style="@style/EditTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/lb4_book_price_et"
			android:inputType="numberDecimal" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="5dp"
			android:text="@string/lb4_book_rating"
			android:textAppearance="@style/TextMainStyle" />

		<EditText
			android:id="@+id/lb4_et_rating"
			style="@style/EditTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/lb4_book_rating_et"
			android:inputType="numberDecimal"
			android:maxLength="3" />
	</LinearLayout>

	<ImageView
		android:id="@+id/lb4_save"
		android:layout_width="20dp"
		android:layout_height="20dp"
		android:layout_marginTop="20dp"
		android:layout_marginEnd="20dp"
		android:src="@drawable/ic_save"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<ImageView
		android:id="@+id/lb4_back"
		android:layout_width="18dp"
		android:layout_height="18dp"
		android:layout_marginTop="20dp"
		android:layout_marginStart="20dp"
		android:src="@drawable/ic_back"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/fio"
		android:textAppearance="@style/TextFIOStyle"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/lb4_btn_camera"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="-30dp"
		android:src="@drawable/ic_camera"
		app:backgroundTint="@color/brown_light"
		app:fabCustomSize="50dp"
		app:layout_constraintBottom_toBottomOf="@id/lb5_book_cover"
		app:layout_constraintEnd_toEndOf="parent"
		app:maxImageSize="25dp"
		app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>