<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB3Activity"
	android:layout_marginHorizontal="20dp"
	android:layout_marginTop="20dp"
	android:paddingBottom="20dp"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/lb3_title"
		android:textAppearance="@style/TextTitleStyle" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="20dp"
		android:text="@string/fio"
		android:textAppearance="@style/TextFIOStyle" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/whos_the_best"
		android:textAppearance="@style/TextMain2BrownStyle" />

	<ListView
		android:id="@+id/lb3_lv_authors"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="8dp"
		android:text="@string/read_this"
		android:textAppearance="@style/TextMain2BrownStyle" />

	<ListView
		android:id="@+id/lb3_lv_books"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="8dp"
		android:text="@string/who_wrote"
		android:textAppearance="@style/TextMain2BrownStyle" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/lb3_rv_ww"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layoutManager="LinearLayoutManager"/>

</LinearLayout>