<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB6Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb6_title"
			android:textAppearance="@style/TextTitleStyle" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fio"
			android:textAppearance="@style/TextFIOStyle"
			android:layout_marginTop="5dp"/>

		<TextView
			android:id="@+id/lb6_gps_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="25dp"
			android:text="@string/lb6_gps_status"
			android:textAppearance="@style/TextMainStyle" />

		<TextView
			android:id="@+id/lb6_gps_coords"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:visibility="gone"
			android:textAppearance="@style/TextMainStyle" />

		<TextView
			android:id="@+id/lb6_network_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/lb6_network_status"
			android:textAppearance="@style/TextMainStyle" />

		<TextView
			android:id="@+id/lb6_network_coords"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:visibility="gone"
			android:textAppearance="@style/TextMainStyle" />
	</LinearLayout>

	<Button
		android:id="@+id/lb6_btn_open_settings"
		style="@style/ButtonMainStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		android:layout_marginBottom="30dp"
		android:text="@string/lb6_open_settings"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>