<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB10Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb10_title"
			android:textAppearance="@style/TextTitleStyle" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fio"
			android:textAppearance="@style/TextFIOStyle"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="10dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingHorizontal="8dp"
			android:layout_marginBottom="10dp">
			<Button
				android:id="@+id/lb10_start_service"
				style="@style/ButtonMainStyle"
				android:layout_weight="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lb10_start_service"
				android:layout_marginEnd="50dp"
				android:onClick="buttonStartService"/>
			<Button
				android:id="@+id/lb10_stop_service"
				style="@style/ButtonMainStyle"
				android:layout_weight="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lb10_stop_service"
				android:onClick="buttonStopService"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingHorizontal="8dp"
			android:layout_marginBottom="20dp">

			<TextView
				android:id="@+id/lb10_tv_get_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:textAppearance="@style/TextMainStyle"/>

			<Button
				android:id="@+id/lb10_get_count"
				style="@style/ButtonMainStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:onClick="buttonGetValue"
				android:text="@string/lb10_get_count"
				android:visibility="gone"/>
		</LinearLayout>

		<TextView
			android:id="@+id/lb10_tv_interval"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextMainStyle"
			android:layout_marginStart="8dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingHorizontal="8dp"
			android:layout_marginBottom="20dp">

			<EditText
				android:id="@+id/lb10_ed_interval"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:inputType="number"
				android:text="1000"
				android:textAppearance="@style/EditTextStyle" />

			<Button
				android:id="@+id/lb10_set_interval"
				style="@style/ButtonMainStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:onClick="buttonSetInterval"
				android:layout_marginStart="140dp"
				android:text="@string/lb10_set_interval" />
		</LinearLayout>


		<TextView
			android:id="@+id/lb10_tv_start_counter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextMainStyle"
			android:layout_marginStart="8dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingHorizontal="8dp"
			android:layout_marginBottom="8dp">

			<EditText
				android:id="@+id/lb10_ed_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:inputType="number"
				android:text="0"
				android:textAppearance="@style/EditTextStyle" />

			<Button
				android:id="@+id/lb10_set_count"
				style="@style/ButtonMainStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:onClick="buttonSetCount"
				android:layout_marginStart="160dp"
				android:text="@string/lb10_set_count" />
		</LinearLayout>
		<Button
			android:id="@+id/lb10_reset"
			style="@style/ButtonMainStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:onClick="buttonSetCount"
			android:layout_marginEnd="8dp"
			android:text="@string/lb10_reset" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>