<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Lb8Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb8_title"
			android:textAppearance="@style/TextTitleStyle" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fio"
			android:textAppearance="@style/TextFIOStyle"
			android:layout_marginTop="5dp"
			android:layout_marginVertical="5dp"/>

		<com.example.mobiledevelopment.DrawClock
			android:id="@+id/draw_tree"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:layout_weight="1"/>

		<Button
			android:id="@+id/lb8_bts_share"
			style="@style/ButtonMainStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb8_share"
			android:layout_gravity="end"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="5dp"
			android:onClick="buttonShare"/>

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>