<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB2Activity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"

		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<LinearLayout
			android:id="@+id/lb2_linear_l"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:layout_marginTop="20dp"
			android:paddingBottom="20dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lb2_title"
				android:textAppearance="@style/TextTitleStyle" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="20dp"
				android:text="@string/fio"
				android:textAppearance="@style/TextFIOStyle" />
		</LinearLayout>
	</ScrollView>

	<Button
		android:id="@+id/lb2_btn"
		style="@style/ButtonMainStyle"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="15dp"
		app:layout_constraintWidth_max="250dp"
		android:minWidth="200dp"
		android:text="@string/lb2_btn"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>