<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LB7Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginHorizontal="20dp"
		android:layout_marginTop="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb7_title"
			android:textAppearance="@style/TextTitleStyle" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fio"
			android:textAppearance="@style/TextFIOStyle"
			android:layout_marginTop="5dp"/>

		<EditText
			android:id="@+id/lb7_query"
			style="@style/EditTextStyle"
			android:layout_marginTop="10dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/lb7_hint"
			android:inputType="textCapSentences" />

		<TextView
			android:id="@+id/lb7_result_count"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextFIOStyle"
			android:layout_marginTop="15dp"
			android:visibility="gone"/>

		<ListView
			android:id="@+id/lb7_list"
			android:layout_marginTop="5dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		</ListView>
	</LinearLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/lb7_btn"
		android:layout_width="50dp"
		android:layout_height="50dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="15dp"
		android:src="@drawable/search"
		app:backgroundTint="@color/brown_light"
		app:fabCustomSize="50dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:tint="@color/white"
		android:onClick="buttonSearchClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>